# pallas-kernel

./: .cluster_name  .cluster_name_gpu  .cluster_name_tpu  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
scripts/: build.sh  launch_gpu.sh
src/: utils.py
src/layers/: gla.py
src/modules/: convolution.py  fused_norm_gate.py  layernorm.py
src/ops/common/: chunk_h.py
src/ops/gla/: __init__.py  chunk.py  fused_chunk.py  fused_recurrent.py  naive.py
tests/: conftest.py  utils.py
tests/layers/: test_gla.py  test_torch_gla.py
tests/modules/: test_modules.py
tests/ops/: test_gla.py  test_torch_fused_recurrent_bwd.py
tests/ops/gla/: test_pallas_chunk_bwd.py  test_pallas_chunk_bwd_dA.py  test_pallas_chunk_bwd_dh.py  test_pallas_chunk_bwd_dqk_intra.py  test_pallas_chunk_bwd_dqkg.py  test_pallas_chunk_bwd_dv.py  test_pallas_chunk_bwd_fused.py  test_pallas_chunk_bwd_with_pl.py  test_pallas_chunk_fwd_h.py  test_pallas_chunk_fwd_intra_gk.py  test_pallas_chunk_fwd_o_gk.py  test_pallas_chunk_gla.py  test_pallas_chunk_gla_g_gamma.py  test_pallas_chunk_local_cumsum.py  test_pallas_fused_recurrent.py  test_pallas_fused_recurrent_bwd.py  test_plkernel_chunk_bwd_dh.py  test_torch_chunk_bwd.py  test_torch_chunk_bwd_dA.py  test_torch_chunk_bwd_dh.py  test_torch_chunk_bwd_dqk_intra.py  test_torch_chunk_bwd_dqkg.py  test_torch_chunk_bwd_dv.py  test_torch_chunk_fwd_intra_gk.py  test_torch_chunk_fwd_o_gk.py  test_torch_chunk_gla.py  test_torch_chunk_local_cumsum.py  test_torch_fused_recurrent.py
tests/ops/ref/gla/: test_chunk_gla.py  test_fused_recurrent_gla.py  test_naive_gla.py
tests/ops/simple_gla/: test_chunk_simple_gla.py  test_pallas_chunk_simple_gla.py  test_simple_gla.py  test_simple_gla_bwd.py
tests/src/layers/: gla.py  utils.py
tests/src/modules/: convolution.py  fused_norm_gate.py  layernorm.py
tests/src/ops/: gold_kda.py
tests/src/ops/common/: fused_recurrent.py
tests/src/ops/gla/: __init__.py  chunk.py  fused_chunk.py  fused_recurrent.py  naive.py
tests/src/ops/gla/common/: fused_recurrent.py
tops/cpu/ops/gla/: __init__.py  chunk.py  fused_chunk.py  fused_recurrent.py  naive.py
tops/layers/: gla.py
tops/modules/: convolution.py
tops/ops/: utils.py
tops/ops/common/: chunk_h.py  chunk_o.py
tops/ops/gla/: chunk.py  fused_chunk.py  fused_recurrent.py
tops/ops/simple_gla/: __init__.py  chunk.py  naive.py
