[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tops"
version = "0.1.0"
description = "JAX/Flax Pallas kernels for Gated Linear Attention (GLA)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "einops>=0.8.2",
    "flax>=0.11.2",
    "numpy>=2.4.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
gpu = [
    "torch",
    "torchvision",
    "jax[cuda12,gpu]>=0.6.2",
    "flash-linear-attention[gpu]>=0.4.1",
]
tpu = [
    "jax[tpu]",
    "torch",
    "torch-xla[tpu]",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
conflicts = [
    [
        { extra = "gpu" },
        { extra = "tpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", extra = "gpu" },
    { index = "pytorch-cpu", extra = "tpu" },
]
torchvision = [{ index = "pytorch-cu126", extra = "gpu" }]


[tool.ruff]
ignore = ["E712","E741","F841"]
